--- a/WardrobeMVCProject/WardrobeMVCProject.csproj
+++ b/WardrobeMVCProject/WardrobeMVCProject.csproj
@@ -224,9 +224,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Accessories.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Bottoms.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Shoes.cs" />
+    <Compile Include="Models\Tops.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sho.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -307,7 +311,9 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
