--- a/WardrobeMVCProject/WardrobeMVCProject.csproj
+++ b/WardrobeMVCProject/WardrobeMVCProject.csproj
@@ -247,6 +247,13 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Wardrobe Images\7500057518.jpg" />
+    <Content Include="Content\Wardrobe Images\gold-women-necklaces-500x500.jpg" />
+    <Content Include="Content\Wardrobe Images\let-loose-heathergray.jpg" />
+    <Content Include="Content\Wardrobe Images\NMS1NXX_01_m.jpg" />
+    <Content Include="Content\Wardrobe Images\pants 1.jpg" />
+    <Content Include="Content\Wardrobe Images\shirt 1.jpg" />
+    <Content Include="Content\Wardrobe Images\shoes 1.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -292,6 +299,7 @@
     <Content Include="Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Content\Wardrobe Images\skirt 1.webp" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
